<resources>
    <string name="app_name">EditText</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_cep">C.E.P.</string>
    <string name="hint_cpf">C.P.F.</string>
    <string name="hint_cnpj">C.N.P.J.</string>
    <string name="msg_erro_nome">O campo nome é obrigatório</string>
    <string name="msg_erro_email">Email inválido</string>
    <string name="msg_erro_cpf">CPF inválido</string>
    <string name="msg_erro_senha">Senha inválida</string>
    <string name="msg_sucesso">Usuário %1$s com email %2$s cadastrado com sucesso!</string>
</resources>
