<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dominando.android.edittext.MainActivity">


    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nome"
        android:imeOptions="actionNext"
        android:inputType="textPersonName|textCapWords" />


    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_senha"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />


    <EditText
        android:id="@+id/edtCep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_cep"
        android:inputType="number"
        android:maxLength="10" />


    <EditText
        android:id="@+id/edtCpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_cpf"
        android:inputType="number"
        android:maxLength="14" />


    <EditText
        android:id="@+id/edtCnpj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_cnpj"
        android:inputType="number"
        android:maxLength="18" />

</LinearLayout>
